# smart_mobility

./: README.md  main_demo_video_link.tx
Abror 12204542/: README.md
Abror 12204542/Call_button/: README.md  package.xml  setup.py
Abror 12204542/Call_button/launch/: callwaiter.launch
Abror 12204542/Call_button/src/: Call_buttonn.py
Abror 12204542/Call_button/test/: test_waiter_bot.py
Abror 12204542/turtlebot3_slam/: README.md  package.xml
Abror 12204542/turtlebot3_slam/include/turtlebot3_slam/: flat_world_imu_node.h
Abror 12204542/turtlebot3_slam/launch/: turtlebot3_cartographer.launch  turtlebot3_frontier_exploration.launch  turtlebot3_gmapping.launch  turtlebot3_hector.launch  turtlebot3_karto.launch  turtlebot3_slam.launch
Abror 12204542/turtlebot3_slam/src/: flat_world_imu_node.cpp
Elyor 12204556/: readme.md  video_link.txt
Elyor 12204556/error_detection_function/: cli_error_detection.py  error_detection.launch  error_detection_publisher.py  error_detection_subscriber.py  package.xml  readme.md  record_error_detection.bag  setup.py  test_error_detection.py
Elyor 12204556/low_battery_function/: cli_tutlebot_low_battery.py  package.xml  publisher_node.py  readme.md  record_turtlebot_low_battery.bag  setup.py  subscriber_node.py  test_turtlebot_low_battery.py  turtlebot_low_battery.launch
Feruz 12204578/: README.md
Feruz 12204578/shell_scripts/: README.md  SLAM.sh  navigation.sh  sbc-setup.sh
Feruz 12204578/speech_to_text/: README.md
Feruz 12204578/speech_to_text/speech_to_text/: package.xml  setup.py
Feruz 12204578/speech_to_text/speech_to_text_msgs/: package.xml
Feruz 12204578/turtlebot3_diagnostics/: README.md
Feruz 12204578/turtlebot3_diagnostics/launch/: turtlebot3_lidar.launch  turtlebot3_model.launch  turtlebot3_remote.launch
Feruz 12204578/turtlebot3_diagnostics/scripts/: create_udev_rules.sh
Feruz 12204578/turtlebot3_navigation/: README.md
Feruz 12204578/turtlebot3_navigation/launch/: amcl.launch  turtlebot3_navigation.launch
Feruz 12204578/turtlebot3_obstacle/: README.md
Feruz 12204578/turtlebot3_obstacle/launch/: interactive_markers.launch  turtlebot3_client.launch  turtlebot3_cliff.launch  turtlebot3_illumination.launch  turtlebot3_obstacle.launch
Feruz 12204578/turtlebot3_obstacle/nodes/: turtlebot3_client.py  turtlebot3_cliff.py  turtlebot3_illumination.py  turtlebot3_obstacle.py  turtlebot3_server.py  turtlebot3_sonar.py
Feruz 12204578/turtlebot3_obstacle/test/: test_turtlebot3_action.py
Feruz 12204578/turtlebot3_teleop/: README.md  package.xml  setup.py
Feruz 12204578/turtlebot3_teleop/launch/: turtlebot3_teleop_key.launch
Feruz 12204578/turtlebot3_teleop/nodes/: turtlebot3_teleop_key.py
Feruz 12204578/turtlebot3_teleop/test/: test_teleop.py
Feruz 12204578/turtlebot3_webapp/: README.md
Feruz 12204578/turtlebot3_webapp/ros_webapp/: package.json
Feruz 12204578/turtlebot3_webapp/rosbridge/: README.md
Feruz 12204578/webapp/: README.md
Feruz 12204578/webapp/ros_webapp/: README.md  package-lock.json
Feruz 12204578/webapp/rosbridge/: CMakeLists.txt  package.xml  setup.py
Feruz 12204578/webapp/rosbridge/launch/: roswww.launch  start_bridge.launch
Feruz/turtlebot3_diagnostics/: CMakeLists.txt  package.xml
Feruz/turtlebot3_diagnostics/launch/: turtlebot3_core.launch  turtlebot3_robot.launch
Feruz/turtlebot3_diagnostics/launch/includes/: description.launch.xml
Feruz/turtlebot3_diagnostics/src/: turtlebot3_diagnostics.cpp
Feruz/turtlebot3_navigation/: package.xml
Feruz/turtlebot3_navigation/launch/: move_base.launch
Feruz/turtlebot3_obstacle/: CMakeLists.txt  package.xml  setup.py
Feruz/turtlebot3_obstacle/launch/: turtlebot3_bumper.launch  turtlebot3_pointop_key.launch  turtlebot3_sonar.launch
Feruz/turtlebot3_obstacle/nodes/: turtlebot3_bumper.py  turtlebot3_client.py  turtlebot3_marker_server.py  turtlebot3_obstacle.py  turtlebot3_pointop_key.py  turtlebot3_server.py
Javokhir 12204567/: demo_link.txt
Javokhir 12204567/opencr_setup/: opencr-setup.sh  readme.md
Javokhir 12204567/pc_setup/: pc_setup.sh  readme.md
Javokhir 12204567/ros2_android_app/: README.md  local.properties  ros2_android_app_pytest.py  ros2_app_cli.py
Javokhir 12204567/ros2_android_app/app/: build.gradle
Javokhir 12204567/ros2_android_app/launchfiles/: joystick_control.launch  map_creation.launch  turtlebot_control.launch
Javokhir 12204567/turtlebot3_bringup/: package.xml  readme.md
Javokhir 12204567/turtlebot3_bringup/src/: turtlebot3_bringup.cpp  turtlebot3_bringup.py
Nigara 12200276/Bonus_work/: README.md  user_interaction.py
Nigara 12200276/Order_Confirmation/voice_order/: package.xml  setup.cfg  setup.py
Nigara 12200276/Speech_To_Text/: package.xml  setup.cfg  setup.py
Nigara 12200276/Speech_To_Text/voice_to_text/: voice_to_text_node.py
Nigara 12200276/demos/: Order_Confirmation_video  STT_video  presentation_video
Rustambek 12204516/: README.md
Rustambek 12204516/order/: package.xml  setup.cfg  setup.py
Rustambek 12204516/order/order/: extracted_data.txt  menu.py  publisher_member_function.py
Tatyana 12200287/: package.xml  report
Tatyana 12200287/status_of_order/: launch  package.xml  setup.cfg  setup.py
Tatyana 12200287/status_of_order/soo/: delivery_status_publisher.py  delivery_status_subscriber.py  test.py
Tatyana 12200287/text_to_speech/: launch  setup.cfg  setup.py  text_to_speech.py  tts_node.py
Tatyana 12200287/text_to_speech/my_tts_pkg/: test_tts_node.py
Temurbek 12204574/: ReadME.md  demo_video.txt
Temurbek 12204574/Parsing_Function/src/: subscriber_member_function.py
Temurbek 12204574/Request_Process/: package.xml
(+216 files in other folders)
