<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_low_battery</name>
  <version>0.0.0</version>
  <description>The turtlebot_low_battery package</description>


  <maintainer email="elyor9760@gmail.com">elyor</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  </export>
</package>
