<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_diagnostics</name>
  <version>1.0.0</version>
  <description>
    roslaunch diagnostics before starting the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="feruz.privet@gmail.com">Feruz</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
</package>
