<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_navigation</name>
  <version>1.0.0</version>
  <description>
    The turtlebot3_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="feruz.privet@gmail.com">Feruz</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_configuration</exec_depend>
</package>
