<?xml version="1.0"?>
<package>
  <name>rosbridge</name>
  <version>1.0.0</version>
  <description>Feathery lightweight web server for ROS, that is based on <a href = "http://www.tornadoweb.org/en/stable">Tornado</a> web server module.</description>

  <author email="feruz.privet@gmail.com">Feruz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rospack</run_depend>
  <test_depend>phantomjs</test_depend>
  <test_depend>python-selenium-pip</test_depend>
  <test_depend>rostest</test_depend>
</package>
